--- a/qreport.Rmd
+++ b/qreport.Rmd
@@ -132,7 +132,6 @@ r
 ## Australia
 ### Brand funnel
 ```{r Australia brand funnel, echo=F, eval=T}
-par(mfrow = c(1, 2))
 funnel_data <- data %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
   dplyr::filter(quarter_measurement ==20 & country==1) %>%
@@ -173,8 +172,6 @@ funnel_data_diff <- funnel_data %>%
     ) %>%
   dplyr::filter(diff_aided!=0, diff_fami!=0, diff_cons!=0, diff_pref!=0)
 
-par(mfrow = c(1, 2))
-
 funnel_data <- funnel_data %>%
   dplyr::filter(b_value==1)
 funnel_data %>%
@@ -186,7 +183,8 @@ funnel_data %>%
             textposition = "inside",
             textinfo = "value",
             opacity = 1.0,
-            marker = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)"),
+            marker = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)",
+                                    "rgb(255,098,000)"),
                           line = list(width = c(2, 2, 2, 2), color = c("white", "white", "white", "white"))),
             textfont = list(family = "ING me", size = 14, color = "white"),
             connector = list(line = list(color = "white"))) %>%
@@ -317,6 +315,8 @@ desi_comb <- data %>%
   distinct()
 
 xaxis <- list(title = "Price perception",
+              range =c(20:90),
+              dtick = 10,
               showline = TRUE,
               showgrid = FALSE,
               showticklabels = TRUE,
@@ -327,11 +327,9 @@ xaxis <- list(title = "Price perception",
               tickcolor = 'rgb(204, 204, 204)',
               tickwidth = 2,
               ticklen = 5,
-              #range = c(20, 80), 
-              seq(0, 100, by = 10),
               tickfont = list(family = "ING me",
                               size = 12,
-                              color = 'rgb(204, 204, 204)'))
+                              color = 'rgb(105, 105, 105)'))
 
 desi_combi <- desi_comb %>%
   plot_ly(x = ~price_mean, y = ~desirability, type = 'scatter', color ='rgb(255,098,000)',
@@ -377,4 +375,119 @@ rep_b<-rep_brand %>%
          yaxis = list(title = "", range= c(0,100))
   )
 rep_b
+```
+
+### Unaided awareness
+
+```{r Australia unaided, echo=F, eval=T}
+awa <- data %>%
+  dplyr::select(b_value, country, labels_countries, labels_quarters,
+                quarter_measurement, unaided, toma, aided, main_competition, label) %>%
+  dplyr::filter(quarter_measurement > 17 & country==1) %>%
+  distinct() %>%
+  dplyr::group_by(quarter_measurement) %>%
+  dplyr::mutate(
+    market_average_unaided = case_when(
+      main_competition == 1 ~ mean(unaided *100, na.rm =T), 
+      TRUE ~ NA_real_),
+    market_average_aided = case_when(
+      main_competition == 1 ~ mean(aided *100, na.rm =T), 
+      TRUE ~ NA_real_),
+    market_average_toma = case_when(
+      main_competition == 1 ~ mean(toma *100, na.rm =T), 
+      TRUE ~ NA_real_),
+    best_unaided = case_when(
+      main_competition == 1 ~ max(unaided *100, na.rm =T), 
+      TRUE ~ NA_real_),
+    best_aided = case_when(
+      main_competition == 1 ~ max(aided *100, na.rm =T), 
+      TRUE ~ NA_real_),
+    best_toma = case_when(
+      main_competition == 1 ~ max(toma *100, na.rm =T), 
+      TRUE ~ NA_real_),
+    unaided_ING = case_when(
+      b_value ==1 ~ unaided *100,
+      TRUE ~ NA_real_),
+    aided_ING = case_when(
+      b_value ==1 ~ aided *100,
+      TRUE ~ NA_real_),
+    toma_ING = case_when(
+      b_value ==1 ~ toma *100,
+      TRUE ~ NA_real_),
+  ) %>%
+    # Gather across quarters
+   # tidyr::spread(quarter_measurement, market_average_unaided) %>%
+  dplyr::ungroup() %>%
+  distinct() %>%
+  dplyr::select(b_value, quarter_measurement, labels_quarters, market_average_unaided, best_unaided, unaided_ING) %>%
+  gather(variable, value, -(b_value:labels_quarters)) %>%
+  dplyr::filter(b_value==1)
+  #unite(temp, quarter_measurement, variable) %>%
+  #spread(temp, value)
+  
+awa$value[awa$variable==""]
+    
+x <-unique(awa$labels_quarters)
+y1 <- awa$value[awa$variable=='market_average_unaided']
+y2 <- awa$value[awa$variable=='best_unaided']
+y3 <- awa$value[awa$variable=='unaided_ING']
+datatest <- data.frame(x, y1, y2, y3)
+xaxis <- list(title = "",
+              showline = TRUE,
+              showgrid = FALSE,
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = FALSE,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 2,
+              ticklen = 5,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+yaxis <- list(title = "",
+              showline = TRUE,
+              showgrid = FALSE,
+              range =c(0,100),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = FALSE,
+              dtick = 10,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 1,
+              ticklen = 1,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+datatest$x <- factor(datatest$x, levels = data[["x"]])
+
+p1 <- plot_ly(data, x = ~x, y = ~y1, type = 'bar', name = 'market average', marker = list(color = 'rgb(82,81,153)')) %>%
+  add_trace(y = ~y2, name = 'best', marker = list(color = "rgb 168, 168, 168")) %>%
+  add_trace(y = ~y3, name = 'ING', marker = list(color = 'rgb(255,098,000)')) %>%
+  layout(xaxis = xaxis,
+         yaxis = yaxis,
+         #margin = list(b = 100),
+         barmode = 'group', title= "Unaided")
+p1
+```
+
+
+
+```{r flags, echo=F, eval=T}
+dat <- data.frame(
+   country = c('Australia', 'Austria', 'Belgium', 'Czech', 'France', 'Germany', 'Italy', 
+               'Luxembourg', 'Netherlands', 'Poland', 'Romania', 'Spain', 'Turkey', 'The Phillippines'),
+   abbr = c('au', 'at', 'be', 'cz', 'fr', 'ge', 'it', 'lu', 'nl', 'po', 'ro', 'sp', 'tu', 'ph'),
+   var1 = c(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14))
+dat$flag <- sprintf('![](http://flagpedia.net/data/flags/mini/%s.png)', dat$abbr)
+dat$file <- paste0(dat$abbr, '.png')
+dat$link <- paste0('http://flagpedia.net/data/flags/mini/', dat$file)
+dat$flag <- sprintf('![](%s)', dat$file)
+for (i in seq_len(nrow(dat))) {
+  if (!file.exists(dat$file[i])) xfun::download_file(dat$link[i])
+}
+knitr::kable(dat[, -c(5, 6)])
 ```
